# ChangeLog for app-cdr/gtoaster
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /var/cvsroot/gentoo-x86/app-cdr/gtoaster/ChangeLog,v 1.3 2002/08/14 09:51:42 pvdabeel Exp $

*gtoaster-1.0_beta5 (28 Mar 2002)

  14 Aug 2002; Pieter Van den Abeele <pvdabeel@gentoo.org> :
  Added ppc keyword

  28 Mar 2002; Seemant Kulleen <seemant@gentoo.org>  gtoaster-1.0_beta5.ebuild :

  Changed USE flag from "ogg" to "oggvorbis"

*gtoaster-1.0_beta5 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.