@@ -1,6 +1,14 @@
 # ChangeLog for app-cdr/gtoaster
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-cdr/gtoaster/ChangeLog,v 1.3 2002/08/14 09:51:42 pvdabeel Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-cdr/gtoaster/ChangeLog,v 1.4 2002/09/06 13:29:55 raker Exp $
+
+*gtoaster-1.0_beta6 (06 Sep 2002)
+
+  06 Sep 2002; Nick Hadaway <raker@gentoo.org>
+  gtoaster-1.0_beta6.ebuild, files/digest-gtoaster-1.0_beta6 :
+  Version bump.  nls additions.  recorder detection bug fix.  Burns
+  faster than 24x are now possible.
+
 
 *gtoaster-1.0_beta5 (28 Mar 2002)
 
@@ -8,13 +16,11 @@
   Added ppc keyword
 
   28 Mar 2002; Seemant Kulleen <seemant@gentoo.org>  gtoaster-1.0_beta5.ebuild :
-
   Changed USE flag from "ogg" to "oggvorbis"
 
 *gtoaster-1.0_beta5 (1 Feb 2002)
 
   1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
-  
   Added initial ChangeLog which should be updated whenever the package is
   updated in any way. This changelog is targetted to users. This means that the
   comments should well explained and written in clean English. The details about
